# sd

./: Cargo.toml  Makefile  build.rs
.github/workflows/: release.yml
src/: cli.rs  input.rs  main.rs  replacer.rs
tests/: cli.rs
