[package]
name = "sd"
version = "0.8.0"
edition = "2021"
authors = ["Gregory <gregory.mkv@gmail.com>"]
description = "An intuitive find & replace CLI"
readme = "README.md"
keywords = ["sed", "find", "replace", "regex"]
license = "MIT"
homepage = "https://github.com/chmln/sd"
repository = "https://github.com/chmln/sd.git"
categories = ["command-line-utilities", "text-processing", "development-tools"]

[dependencies]
regex = "1.4.3"
rayon = "1.5.0"
unescape = "0.1.0"
memmap = "0.7.0"
tempfile = "3.2.0"
thiserror = "1.0.24"
globwalk = "0.8.1"
atty = "0.2.14"
ignore = "0.4.17"
ansi_term = "0.12.1"
clap = { version = "4.0.17", features = ["derive"] }
clap_complete = "4.0.3"

[dev-dependencies]
anyhow = "1.0.65"
assert_cmd = "2.0.4"

[build-dependencies]
clap = { version = "4.0.17", features = ["derive"] }
clap_complete = "4.0.3"
clap_mangen = "0.2.3"

[profile.release]
opt-level = 3
lto = true
strip = true
